[PJ-935] - Alignment fixes

--- a/app/design/frontend/peterjacksons/petertheme/web/css/modules/catalog/_catalog-main.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/modules/catalog/_catalog-main.scss
@@ -19,7 +19,7 @@
     }
 
     .sidebar {
-        min-width: 171px;
+        min-width: 191px;
         order: -1;
 
         @media all and (max-width: 860px) {
@@ -93,7 +93,7 @@ body[class~='catalogsearch-result-index'] {
 
 
 .catalog-main {
-    max-width: 850px;
+    max-width: 820px;
 
     &__description {
         text-align: left;
@@ -106,7 +106,7 @@ body[class~='catalogsearch-result-index'] {
         max-width: 720px;
         margin: 20px auto;
         align-items: center;
-        padding: 0 100px;
+        padding: 0 75px;
 
         @media all and (max-width: 550px) {
             padding: 10px 20px 10px 20px;
@@ -170,7 +170,7 @@ body[class~='catalogsearch-result-index'] {
         }
 
         &--right-column {
-            padding: 25px 25px 25px 50px;
+            padding: 25px;
 
             &.text-center {
                 text-align: center;
@@ -199,7 +199,7 @@ body[class~='catalogsearch-result-index'] {
         }
 
         img {
-            max-width: 250px;
+            max-width: 270px;
             height: auto;
         }
     }
